@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-10T00:27:32Z",
+  "timestamp" : "2022-08-12T16:06:39Z",
   "count_outdated" : 41,
   "uniques_outdated" : 35,
-  "count" : 43,
-  "uniques" : 37,
+  "count" : 49,
+  "uniques" : 42,
   "clones" : [
     {
       "timestamp": "2022-08-04T00:00:00Z",
@@ -18,6 +18,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-12T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "uniques": 5,
+      "uniques_minmax": [ 5, 5 ]
     }
   ]
 }
